# stone

./: .gitignore  .merlin  CHANGES.md  INSTALL.md  LICENSE  Makefile  Makefile.in  README  README.md  configure  dune-project  opam  stone.opam  top.ml
data/: config.stone  example_index.md  org_template.html  stone.toml  style.css  template.html
data/static/: style.css
doc/: config.stone  stone.toml
doc/data/: style.css  template.html
doc/pages/: Specs.md  contact.md  contribute.md  get-it.md  index.md  sources.md  specs.md  static
doc/templates/: template.html
src/: conf.ml  dune  gen.ml  params.ml  rule.ml  rules.ml  stone.ml  stone_inotify.fake.ml  stone_inotify.mli  stone_inotify.real.ml  template.ml  template.mli  util.ml  watch.ml  watch.mli
src/utils/: pack_text.ml
