opam-version: "2.0"
maintainer: "armael@isomorphis.me"
author: "armael@isomorphis.me"
homepage: "http://dev.isomorphis.me/stone"
bug-reports: "http://github.com/Armael/stone/issues"
dev-repo: "git+https://github.com/Armael/stone.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "dune" {>= "1.11"}
  "crunch" {build}
  "cow" {>= "2.0.0"}
  "base-bytes"
  "config-file"
  "crunch"
  "inotify" {>= "2.3"}
  "omd"
]
synopsis: "Stone is a static website generator"
