opam-version: "2.0"
maintainer: "armael@isomorphis.me"
author: "armael@isomorphis.me"
homepage: "http://dev.isomorphis.me/stone"
bug-reports: "http://github.com/Armael/stone/issues"
dev-repo: "git+https://github.com/Armael/stone.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "dune" {>= "1.11"}
  "crunch" {build}
  "cow" {>= "2.0.0"}
  "base-bytes"
  "inotify" {>= "2.3" & os = "linux"}
  "cmarkit" {>= "0.3.0"}
  "bos" {>= "0.2.0"}
  "astring" {>= "0.8"}
  "otoml" {>= "1.0"}
]
synopsis: "Stone is a static website generator"
