(rule
  (targets data.ml)
  (deps (:data (source_tree ../data)))
  (action (run %{bin:ocaml-crunch} -m plain ../data -o %{targets})))

(executable
  (name stone)
  (public_name stone)
  (libraries
   cow
   crunch
   (select stone_inotify.ml from
    (inotify -> stone_inotify.real.ml)
    (        -> stone_inotify.fake.ml))
   str
   bos
   otoml
   astring
   cmarkit))
